apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__private-3.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:orga:type:Organization:entity:c20c68e9284977d48135c025d2cfbe3ba985fece08fb225547def3726abddecc:representation:c20c68e9284977d48135c025d2cfbe3ba985fece08fb225547def3726abddecc:hash:1f9c511bd822353fd537e99725b0eac8c8f09014d6a9ce7f3a837949890f0619:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c:03ac674216f3e15c761ee1a5e255f067953623c8b388b4459e13f978d7c846f4",
    "status": "cached",
    "cache_control": "private"
  },
  {
    "key": "version:1.2:subgraph:user:type:Query:hash:e378f205221770b789bb48957e4bf0551d12091c855ef0dee1d2edb99f953394:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c:03ac674216f3e15c761ee1a5e255f067953623c8b388b4459e13f978d7c846f4",
    "status": "cached",
    "cache_control": "private"
  }
]
