apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__private-6.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: response
---
{
  "data": {
    "currentUser": null
  },
  "errors": [
    {
      "message": "subgraph mock not configured",
      "path": [],
      "extensions": {
        "code": "SUBGRAPH_MOCK_NOT_CONFIGURED",
        "service": "user"
      }
    }
  ]
}
