apollo-router/src/plugins/cache/snapshots/apollo_router__plugins__cache__tests__private.snap
---
source: apollo-router/src/plugins/cache/tests.rs
expression: cache_keys
---
[
  {
    "key": "version:1.2:subgraph:orga:type:Organization:entity:c20c68e9284977d48135c025d2cfbe3ba985fece08fb225547def3726abddecc:representation:c20c68e9284977d48135c025d2cfbe3ba985fece08fb225547def3726abddecc:hash:026a1c5b68c78cc08c37147b93c027a7f941bede862581376d771c6391e1dec9:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c",
    "status": "new",
    "cache_control": "private"
  },
  {
    "key": "version:1.2:subgraph:user:type:Query:hash:5ed182cf2c16ffe3e9a93d9e0699d5d29279aaf6634ec89d7ced92a7a8f67891:data:d9d84a3c7ffc27b0190a671212f3740e5b8478e84e23825830e97822e25cf05c:03ac674216f3e15c761ee1a5e255f067953623c8b388b4459e13f978d7c846f4",
    "status": "new",
    "cache_control": "private"
  }
]
